# fork-cookiecutter-data-science

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: pre-commit.yml  pylint.yml
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  pyproject.toml  test_environment.py
{{ cookiecutter.repo_name }}/docs/: conf.py
