[tool.poetry]
name = "cookiecutter-data-science"
version = "1.1.0"
description = "This is a fork of Data Science Cookiecutter."
authors = ["Gustavo Suto <guyrux@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
